<resources>
    <string name="app_name">Runathon</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="facebook_app_id">284489345258643</string>
    <string name="loading">Loading…</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="signed_out">Signed Out</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="chat">Chat</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="feed">Feed</string>
    <string name="fb_login_protocol_scheme">fb284489345258643</string>
    <string name="auth_failed">Invalid user name or password</string>

    <string-array name="sort_order_values">
        <item>Date Ascending</item>
        <item>Date Descending</item>
    </string-array>
    <string name="title_activity_leader_board">LeaderBoardActivity</string>
    <string name="distance">Distance: --:--</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_user_name">Username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_location">Location</string>
    <string name="pref_user_location_summary">Set your location</string>
    <string name="pref_user_setting">User Settings</string>
    <string name="pref_marathon_type">Marathon Type</string>
    <string name="pref_running_summary">Set the Marathon Type</string>
    <string name="pref_user_running_level">Running Level</string>
    <string name="pref_user_running_level_summary">Set your current running level</string>


    <string-array name="marathonTypes">
        <item name="1">5K</item>
        <item name="2">10K</item>
        <item name="3">Half Marathon</item>
        <item name="4">Full Marathon</item>
    </string-array>
    <string-array name="marathonTypeValues">
        <item name="1">1</item>
        <item name="7">2</item>
        <item name="30">3</item>
        <item name="0">4</item>
    </string-array>


    <string-array name="userRunningLevel">
        <item name="1">Beginner</item>
        <item name="2">Intermediate</item>
        <item name="3">Advanced</item>
    </string-array>
    <string-array name="userRunningLevelValues">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
    </string-array>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="secret_maps_api_key">AIzaSyAyK2iYheF8A8XvvF0XG3G6oWqnDBBI57w</string>
    <string name="congratulations">Congratulations on finishing your marathon!</string>

</resources>