<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:background="#00ACC1"
              android:layout_height="match_parent">

        <ImageView
                android:id="@+id/icon"
                style="@style/ThemeOverlay.FirebaseIcon"
                android:contentDescription="@string/desc_firebase_lockup"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

        <TextView
                android:id="@+id/title_text"
                android:layout_below="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="@dimen/title_bottom_margin"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                fontPath="fonts/Blackout-Midnight.ttf"
                android:textSize="50sp"
                android:text="@string/app_name"
                android:layout_centerHorizontal="true"
                android:theme="@style/ThemeOverlay.MyTitleText"/>

        <com.facebook.login.widget.LoginButton
                android:id="@+id/button_facebook_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="350dp"
                android:layout_centerHorizontal="true"/>

        <TextView
                android:id="@+id/login_text"
                android:layout_below="@+id/button_facebook_login"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"

                android:text="I prefer email"/>

        <Button
                android:id="@+id/button_facebook_signout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@+id/btnLogin"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:visibility="gone"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etEmail"
                android:layout_marginTop="250dp"
                android:hint="Email"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:visibility="gone"
                android:layout_centerHorizontal="true"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPassword"
                android:visibility="gone"
                android:hint="Password"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_below="@+id/etEmail"
                android:layout_alignLeft="@+id/etEmail"
                android:layout_alignStart="@+id/etEmail"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign in"
                android:id="@+id/btnLogin"
                android:visibility="gone"
                android:layout_below="@+id/etPassword"
                android:layout_centerHorizontal="true"
                android:onClick="signInUser"/>

</RelativeLayout>